# event

./: .dockerignore  .env  .env.example  .gitignore  .travis.yml  App.toml.sample  CHANGELOG.md  Cargo.toml  README.md  deploy.init.sh  diesel.toml  skaffold.yml  sqlx-data.json  werf.yaml
.github/workflows/: build-dev-artifacts.yml  build-release-artifacts.yml  check.yml  ci.yml  deploy-via-flux.yml  deploy.yml  release.yml
.helm/: secret-values.yaml  values.yaml
.helm/templates/: 09-cm-app.yaml  10-app.yaml  30-hpa.yaml  30-vpa.yaml  _affinity.tpl  _envs.yaml  _init.tpl  _volumes.tpl  migrations.yaml
.helm/templates/infra/: postgres.yaml
benchmarks/: Cargo.toml  README.md
benchmarks/src/: interval.rs  lib.rs  test_agent.rs  types.rs
chart/: Chart.yaml  sample.yaml  values.yaml  values.yaml.example
chart/templates/: _helpers.tpl  app-cm.yaml  configmap.yaml  env.yaml  headless-svc.yaml  ingress.yaml  pdb.yaml  servicemonitor.yaml  services.yaml  sts.yaml
chart/templates/network/: cluster-svc.yaml  ing.yaml
chart/templates/tests/: test-connection.yaml
chart/templates/util/: servicemonitor.yaml
docker/: Dockerfile  docker-compose.yml  migration.dockerfile
docker/backend/: dbconfig.yml  entrypoint.sh
docker/backend/conf.d/: auth.toml  config.yml
docker/backend_db/: Dockerfile  create_db.sh
docs/: book.toml
docs/data/: event.schema.xml  room_entrance.xml  room_time_update.xml
docs/src/: SUMMARY.md  api.agent.list.md  api.agent.md  api.errors.md  api.event.create.md  api.event.list.md  api.event.md  api.md  api.room.adjust.md  api.room.create.md  api.room.enter.md  api.room.leave.md  api.room.md  api.room.read.md  api.state.md  api.state.read.md  authz.md  impl.md  integration.md  overview.md
docs/src/api/: agent.md  change.md  edition.md  errors.md  event.md  http.md  room.md  state.md
docs/src/api/agent/: list.md  update.md
docs/src/api/ban/: list.md
docs/src/api/change/: create.md  delete.md  list.md
docs/src/api/edition/: commit.md  create.md  (+2 more)
docs/src/impl/: database_schema.md  message_handling.md  room_adjustment.md  room_entrance.md  state_calculation.md
integration_tests/: Gemfile  README.md  edition_commit.rb  event_create_list.rb  room_adjust.rb  room_create_read.rb  room_create_read_update.rb  room_enter_leave.rb  state_read.rb
legacy_db_migration/: legacy_db.sh  legacy_db.sql  primary.sql  reverse.sql  secondary.sql
migrations/: 20200917165038_initial.sql  20201008182023_set_data_size_constraint.sql  20201021001404_add_attribute_to_event.sql  20201030125521_add_account_room_ban.sql  20201118122235_add_reason_to_room_ban.sql  20201217124501_add_preserve_history_to_room.sql  20201222103221_add_original_created_by_to_event.sql  20210426113744_add_classroom_id_to_rooms.sql  20210914135526_AddRoomClassroomIdIndex.sql  20211019015604_add_event_created_at_idx.sql  20211027150330_add_locked_types_to_room.sql  20211101123502_change_locked_events_type.sql  20211123155455_change_on_event_insert.sql  20211201141718_fix_on_event_insert.sql  20211201153439_not_nullable_original_created_by.sql  20211220121154_add_validate_whiteboard_access_to_room.sql  20220112082447_add_removed_to_event.sql  20220126131548_add_notification.sql  20220218113129_add_namespace_to_notification.sql  20220427161630_add_offline_agent_status.sql  20220617102503_update_data_size_constraint.sql  20220906105845_add_event_binary_format.sql  20221013100311_drop_unused_indices.sql  20230213131647_drop_unused_indices.sql  20230222133421_fix_on_event_insert.sql  20230302093017_fix_on_event_insert_1.sql  20230303165241_add_outbox_fields.sql  20230419084118_change_bulk_removal.sql  20230704101035_add_kind_to_room.sql  20230705112629_set_room_kind_as_not_null.sql  20230726113252_remove_whiteboard_access.sql
migrations/2020-01-28-000000_initial/: down.sql  up.sql
migrations/2020-01-28-004728_create_room/: down.sql  up.sql
migrations/2020-02-12-000944_create_agent/: down.sql  up.sql
migrations/2020-02-12-223950_create_event/: down.sql  up.sql
migrations/2020-02-17-201407_create_event_state_view/: down.sql  up.sql
migrations/2020-02-26-183154_drop_state_views/: down.sql  up.sql
migrations/2020-03-05-121142_create_editions/: down.sql  up.sql
migrations/2020-03-10-205027_optimize_state_indexes/: down.sql  up.sql
migrations/2020-03-11-090819_create_changes/: down.sql  up.sql
migrations/2020-03-16-024034_rename_agent_to_agent_session/: down.sql  up.sql
migrations/2020-03-17-134003_fix_agent_session_unique_constraint/: down.sql  up.sql
migrations/2020-03-20-122202_revert_agent_session/: down.sql
migrations/2020-04-16-115325_redo_change_migration/: down.sql  up.sql
migrations/2020-04-28-122234_add_functions_to_change_event_data_urls/: down.sql  up.sql
migrations/2020-07-08-134216_create_chat_notification/: down.sql  up.sql
migrations/legacy_db/: legacy_db.sh  legacy_db.sql
src/: authz.rs  authz_cache.rs  cache.rs  config.rs  main.rs  metrics.rs  migration_to_binary_format.rs  profiler.rs  schema.patch  schema.rs  serde.rs
src/app/: broker_client.rs  config.rs  context.rs  error.rs  extractors.rs  http.rs  message_handler.rs  mod.rs  nats_client.rs  nats_consumer.rs  nats_puller.rs  notification_puller.rs  s3_client.rs  service_utils.rs  task_executor.rs  topic.rs
src/app/endpoint/: agent.rs  ban.rs  change.rs  chat_notifications.rs  dummy.rs  edition.rs  event.rs  helpers.rs  metric.rs  mod.rs  room.rs  state.rs  subscription.rs  system.rs
src/app/metrics/: collector.rs  metric.rs  mod.rs  stats_route.rs
src/app/operations/: adjust_room.rs  commit_edition.rs  dump_events_to_s3.rs  mod.rs  vacuum.rs
src/app/stage/: mod.rs
src/backend/: mod.rs  types.rs
src/db/: adjustment.rs  agent.rs  agent_session.rs  change.rs  chat_notification.rs  edition.rs  event.rs  mod.rs  notification.rs  room.rs  room_ban.rs  room_time.rs  total_count.rs
src/db/event/: binary_encoding.rs  mass_delete_by_room.rs  mod.rs  schema.rs  set_state.rs
src/test_helpers/: agent.rs  authz.rs  context.rs  db.rs  factory.rs  mod.rs  outgoing_envelope.rs  shared_helpers.rs
(+54 files in other folders)
