[package]
authors = ["Timofey Martynov <t.martinov@netology-group.ru>"]
edition = "2018"
name = "event"
version = "0.2.44"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = {version = "0.4", features = ["serde"]}
config = "0.11"
crossbeam-channel = "0.4"
dotenv = "0.15"
futures = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
http = "0.2"
quaint = {version = "0.1", features = ["uuid-0_8", "chrono-0_4"]}
rusoto_core = "0.47"
rusoto_credential = "0.47"
rusoto_s3 = "0.47"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_qs = "0.8.5"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
sqlx = {version = "0.5", features = ["offline", "postgres", "macros", "uuid", "chrono", "json", "bigdecimal", "runtime-tokio-native-tls"]}
svc-agent = {version = "0.19", features = ["sqlx", "queue-counter"]}
svc-authn = {version = "0.7", features = ["jose", "sqlx"]}
svc-authz = "0.11"
svc-error = {version = "0.2", features = ["sqlx", "svc-agent", "svc-authn", "svc-authz", "sentry-extension"]}
tokio = {version = "1", features = ["full"]}
url = "2"
uuid = {version = "0.8", features = ["v4", "serde"]}
sentry = {version = "0.23",  default-features = true }
prometheus = "0.13"
enum-iterator = "0.7"
parking_lot = "0.11"
axum = "0.3"
tower = "0.4"
hyper = { version = "0.14", features = [ "server" ]}
svc-utils = { version = "0.1.1", features = ["authn-extractor", "cors-middleware"] }
tracing = "0.1"
tracing-appender = "0.1"
tracing-attributes  = "0.1"
tracing-error = { version = "0.1" }
tracing-log = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
rand = "0.8"

[dev-dependencies]
rusoto_mock = "0.47"
serial_test = "0.5"
humantime = "2.1.0"
mockall = "0.10"
