[package]
authors = ["Timofey Martynov <t.martinov@netology-group.ru>"]
edition = "2018"
name = "event"
version = "0.2.46"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.3"
chrono = { version = "0.4", features = ["serde"] }
config = "0.11"
crossbeam-channel = "0.4"
dotenv = "0.15"
enum-iterator = "0.7"
futures = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
http = "0.2"
humantime-serde = "1"
hyper = { version = "0.14.15", features = [ "server" ] }
parking_lot = "0.11"
prometheus = "0.13"
quaint = { version = "0.1", features = ["uuid-0_8", "chrono-0_4"] }
rand = "0.8"
reqwest = "0.11"
rusoto_core = "0.47"
rusoto_credential = "0.47"
rusoto_s3 = "0.47"
sentry = { version = "0.23", default-features = true }
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_qs = "0.8.5"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
sqlx = { version = "0.5", features = ["offline", "postgres", "macros", "uuid", "chrono", "json", "bigdecimal", "runtime-tokio-native-tls"] }
svc-agent = { version = "0.19", features = ["sqlx", "queue-counter"] }
svc-authn = { version = "0.7", features = ["jose", "sqlx"] }
svc-authz = "0.11"
svc-error = { version = "0.2", features = ["sqlx", "svc-agent", "svc-authn", "svc-authz", "sentry-extension"] }
svc-utils = { version = "0.1.5", features = ["authn-extractor", "cors-middleware", "log-middleware"] }
tokio = { version = "1.14", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.1", features = ["trace"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-attributes  = "0.1"
tracing-error = { version = "0.2" }
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"
uuid = { version = "0.8", features = ["v4", "serde"] }

[dev-dependencies]
humantime = "2.1.0"
mockall = "0.10"
rusoto_mock = "0.47"
serial_test = "0.5"
