[package]
authors = ["Timofey Martynov <t.martinov@netology-group.ru>"]
edition = "2021"
name = "event"
version = "0.2.76"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.6", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.13"
crossbeam-channel = "0.5"
enum-iterator = "1.4"
futures = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
http = "0.2"
humantime-serde = "1.1"
hyper = { version = "0.14", features = [ "server" ] }
parking_lot = "0.12"
postcard = { version = "1.0", features = ["alloc"] }
prometheus = "0.13"
rand = "0.8"
reqwest = "0.11"
rusoto_core = "0.48"
rusoto_credential = "0.48"
rusoto_s3 = "0.48"
sentry = { version = "0.31", default-features = true, features = ["reqwest"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = { version = "1.0" }
serde_qs = "0.12"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
sqlx = { version = "0.6", features = ["offline", "postgres", "macros", "uuid", "chrono", "json", "bigdecimal", "runtime-tokio-native-tls"] }
svc-agent = { version = "0.20", features = ["sqlx", "queue-counter"] }
svc-authn = { version = "0.8", features = ["jose", "sqlx"] }
svc-authz = { version = "0.12" }
svc-error = { version = "0.5", features = ["sqlx", "svc-agent", "svc-authn", "svc-authz", "sentry-extension"] }
svc-utils = { version = "0.7", features = ["authn-extractor", "cors-middleware", "log-middleware"] }
svc-nats-client = { version = "0.2" }
svc-conference-events = { version = "0.2" }
tokio = { version = "1.28", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-attributes  = "0.1"
tracing-error = { version = "0.2" }
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = { version = "2.1" }
uuid = { version = "1.3", features = ["v4", "serde"] }

[dependencies.dotenv]
version = "0.15"
optional = true

[dev-dependencies]
hex = "0.4"
humantime = "2.1"
mockall = "0.11"
rusoto_mock = "0.48"
serial_test = "2.0"

[profile.release]
debug = true
