[package]
name = "event_benchmark"
version = "0.2.6"
authors = ["Timofey Martynov <t.martinov@netology-group.ru>"]
edition = "2018"

[dependencies]
async-std = { version = "1.6", features = ["attributes", "unstable"] }
chrono = "0.4"
clap = "2.33"
ctrlc = "3.1"
env_logger = "0.7"
futures = { version = "0.3", features = ["thread-pool"] }
futures-channel = "0.3"
futures-timer = "3.0"
log = "0.4"
rand = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
svc-agent = "0.14.1"
quantiles = "0.7.1"
uuid = { version = "0.6", features = ["v4", "serde"] }

[patch.crates-io]
svc-agent = {git = "https://github.com/netology-group/svc-agent-rs", tag = "v0.14.1"}
